--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.REORDER_TASKS" />
+<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>-->
+    <!-- Need to specify foreground permissions types!! research -->
+
 
     <application
         android:allowBackup="true"
@@ -33,7 +37,9 @@
             android:showWhenLocked="true"
             android:taskAffinity=""
             android:theme="@style/Theme.Alarm"
-            android:turnScreenOn="true" />
+            android:turnScreenOn="true" >
+        </activity>
+
 
         <receiver android:name=".alarming.AlarmReceiver" />
     </application>
