--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- configchanges: keep stat ewhen orientation changes (dont work) -->
         <activity
             android:name=".AlarmActivity"
+            android:configChanges="orientation|screenSize"
             android:excludeFromRecents="true"
             android:exported="false"
             android:launchMode="singleTop"
