--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ cameraCore = "1.3.4"
 camera2 = "1.3.4"
 cameraView = "1.5.2"
 cameraLifecycle = "1.5.2"
+cameraCoreVersion = "1.5.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,6 +47,7 @@ androidx-camera-core = { group = "androidx.camera", name = "camera-core", versio
 androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "camera2" }
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraView" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraLifecycle" }
+camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "cameraCoreVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
